--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.0",
+    "geist": "^1.2.2",
     "@tanstack/react-query": "^5.0.0",
     "bufferutil": "^4.0.8",
     "utf-8-validate": "^6.0.3",
